# spatial-video-player

./: .gitignore  AGENTS.md  Architecture.md  CMakeLists.txt  Implementation.md  LICENSE  Plan.md  README.md
include/spatial/: BoundedQueue.hpp  Camera.hpp  Geometry.hpp  MediaPipeline.hpp  ShaderProgram.hpp  VideoRenderer.hpp
shaders/: basic.frag  basic.vert  yuv.frag
src/: Camera.cpp  Geometry.cpp  MediaPipeline.cpp  ShaderProgram.cpp  VideoRenderer.cpp  main.cpp
